--- a/frontend/view/owner/review.html
+++ b/frontend/view/owner/review.html
@@ -47,6 +47,34 @@
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script type="module" src="/js/owner/review.js"></script>
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Bootstrap Datepicker CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- jQuery (선택 사항)
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <!-- Bootstrap Datepicker JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $("#datepicker").datepicker({
+          format: "yyyy-mm-dd",
+          autoclose: true,
+          todayHighlight: true,
+        });
+      });
+    </script>
   </head>
 
   <body>
@@ -281,6 +309,30 @@
           </div>
         </div>
 
+        <div class="container mt-5">
+          <h2>날짜 선택</h2>
+          <div class="row">
+            <div class="col-md-6">
+              <label for="startDate" class="form-label">시작 날짜</label>
+              <input
+                type="text"
+                class="form-control"
+                id="startDate"
+                placeholder="시작 날짜를 선택하세요"
+              />
+            </div>
+            <div class="col-md-6">
+              <label for="endDate" class="form-label">끝 날짜</label>
+              <input
+                type="text"
+                class="form-control"
+                id="endDate"
+                placeholder="끝 날짜를 선택하세요"
+              />
+            </div>
+          </div>
+        </div>
+
         <div class="container-fluid pt-4 px-4">
           <div class="bg-light rounded h-100 p-4">
             <h6 class="mb-4 reviewList">
@@ -346,13 +398,28 @@
 
             <div id="pagination text-center">
               <ul class="pagination justify-content-center">
-                <li class="page-item">
+                <li
+                  class="page-item"
+                  v-if="currentPage > 1"
+                  @click="changePage(currentPage - 1)"
+                >
                   <a class="page-link" href="#" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                   </a>
                 </li>
-                <li class="page-item"><a class="page-link" href="#"></a></li>
-                <li class="page-item">
+                <li
+                  class="page-item"
+                  v-for="page in totalPages"
+                  :key="page"
+                  @click="changePage(page)"
+                >
+                  <a class="page-link" href="#">{{page}}</a>
+                </li>
+                <li
+                  class="page-item"
+                  v-if="currentPage < totalPages"
+                  @click="changePage(currentPage + 1)"
+                >
                   <a class="page-link" href="#" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                   </a>
