--- a/frontend/view/admin/srAdminStores.html
+++ b/frontend/view/admin/srAdminStores.html
@@ -13,8 +13,8 @@
     <link href="/css/owner/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
     <link href="/css/owner/lib/tempusdominus/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/owner/style.css" rel="stylesheet" />
-    <link href="/css/owner/mainlogo.css" rel="stylesheet">
+    <link href="/css/admin/style.css" rel="stylesheet" />
+    <link href="/css/admin/mainlogo.css" rel="stylesheet">
 
     <!-- JavaScript Libraries -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
@@ -33,13 +33,13 @@
     <script src="/js/owner/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     <script src="/node_modules/fullcalendar/index.global.min.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7394510cd6543ff560b02ba31649d9f3&libraries=services"></script>
     <!-- Template Javascript -->
     <script type="module" src="/js/owner/main.js"></script>
   </head>
 
   <body>
   <div id="app">
-    
     <div class="container-xxl position-relative bg-white d-flex p-0">
       <!-- Spinner Start -->
       <spinner-component></spinner-component>
@@ -179,8 +179,8 @@
       </div>
       <!-- Content End -->
 
-      <div class="modal fade" id="storeModal">
-        <div class="modal-dialog modal-dialog-centered">
+      <div class="modal modal-lg fade" id="storeModal">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
           <div class="modal-content">
       
             <!-- Modal Header -->
@@ -191,23 +191,108 @@
       
             <!-- Modal body -->
             <div class="modal-body"> 
-              <form>
+              <form v-on:submit="submitUpdate">
                 <div class="mb-3">
+                  <!-- storeId -->
+                   <fieldset class="border rounded-3 p-2"><legend class="float-none w-auto">매장관련</legend>
+                  <input type="hidden" v-model="storeInfo.storeId" name="storeId">
+                  <!-- 매장명 -->
                   <label for="storeName" class="form-label">매장명</label>
-                  <input type="text" class="form-control mb-3" id="storeName" v-model="storeInfo.storeName" :placeholder="storeInfo.storeName">
+                  <input type="text" name="storeName" class="form-control mb-3" id="storeName" v-model="storeInfo.storeName" :placeholder="storeInfo.storeName">
+                  <!-- 길 설명 -->
+                  <label for="descprtion" class="form-label">매장 소개</label>
+                  <input type="text" name="descprtion" class="form-control mb-3" id="descprtion" v-model="storeInfo.descprtion" :placeholder="storeInfo.descprtion">
+                  <!-- 전화번호 -->
                   <label for="tel" class="form-label">전화번호</label>
-                  <input type="text" class="form-control mb-3" id="tel" v-model="storeInfo.tel" :placeholder="storeInfo.tel">
+                  <input type="text" name="tel" class="form-control mb-3" id="tel" v-model="storeInfo.tel" :placeholder="storeInfo.tel">
+                  <!-- 매장주소 -->
                   <label for="address" class="form-label">매장주소</label>
-                  <input type="text" class="form-control mb-3" id="address" v-model="storeInfo.address" :placeholder="storeInfo.address" @click="openAddress" readonly>
+                  <input type="text" name="address" class="form-control mb-3" id="address" v-model="storeInfo.address" :placeholder="storeInfo.address" @click="openAddress" readonly>
+                  <input type="text" name="directionGuide" class="form-control mb-3" id="directionGuide" v-model="storeInfo.directionGuide" placeholder="오시는길 안내">
+                  <!-- 매장 주소좌표값 -->
+                  <input type="hidden" v-model="storeInfo.locationLatX" step="0.0000001"><input type="hidden" v-model="storeInfo.locationLonY" step="0.0000001">
+                  </fieldset>
+                  <fieldset class="border rounded-3 p-2"><legend class="float-none w-auto">예약 관련</legend>
+                    <div class="row g-3">
+                      <div class="col-9">
+                        <!-- 카테고리선택 -->
+                        <div for="categories" class="form-label"><label>업종 선택 (복수 선택 가능)</label></div>
+                        <span v-for="category in categories" :key="category.categoryCodeId">
+                        <input type="checkbox" class="btn-check" :id="category.categoryCodeId" v-model="selectedCategories" :value="category.categoryCodeId" name="category">
+                        <label class="btn btn-outline-primary m-1" :for="category.categoryCodeId">{{category.categoryName}}</label>
+                        </span>
+                      </div>
+                      <!-- 예약 스케쥴 간격 -->
+                      <div class="col">
+                        <label for="rotationId" class="form-label">예약 간격</a></label>
+                        <select class="form-select" aria-describedby="rotationHelp" name="rotationId" id="rotationId" v-model="storeInfo.rotationId">
+                        <option v-for="rotation in rotations" :key="rotation.rotationCodeId" :value="rotation.rotationCodeId">{{ rotation.rotation }}분</option>
+                      </select>
+                      <div id="rotationHelp" class="form-text">설정한 간격으로 매일 자정에 예약 스케쥴이 생성됩니다.</div>
+                      </div>
+                    </div>
+                    <div class="row g-3">
+                      <div class="col">
+                        <!-- 1팀당 최대 인원 -->
+                        <div for="maxPeoplePerReserve" class="form-label"><label>팀당 최대 인원</label></div>
+                        <input type="number" class="form-control" id="maxPeoplePerReserve" v-model="storeInfo.maxPeoplePerReserve" @input="checkReservePeople">
+                        <p class="text-danger">{{ message }}</p>
+                      </div>
+                      <!-- 예약시간당 최대 수용 인원 -->
+                      <div class="col">
+                        <label for="maxPeople" class="form-label">예약 시간대 최대 인원</a></label>
+                        <input type="number" class="form-control" id="maxPeople" v-model="storeInfo.maxPeople">
+                      </div>
+                    </div>
+                  </fieldset>
+                    <!-- 영업시간 -->
+                    <fieldset class="border rounded-3 p-2"><legend class="float-none w-auto">영업시간</legend>
+                      <p class="text-center">휴일로 설정할 경우 해당 요일에는 예약 슬롯이 생성되지 않습니다.</p>
+                      <p class="text-center text-danger">※ 휴일 설정시 해당 요일에 최근 한 달안에 예약이 있을 경우 해당 예약은 자동취소 됩니다. ※</p>
+                      <div class="row g-3">
+                        <div class="col-4 text-center"><label>오픈시간</label></div>
+                        <div class="col-4 text-center"><label>마감시간</label></div>
+                        <div class="col-2 text-center"><label>요일</label></div>
+                        <div class="col-2 text-center"><small>휴일여부</small></div>
+                      </div>
+                      <div class="row g-3 mb-2" v-for="(schedule, index) in storeInfo.storeSchedules" :key="schedule.scheduleId">
+                        <div class="col-4">
+                          <!-- 오픈시간 -->
+                          <input type="time" name="open" class="form-control" v-model="schedule.open" :readonly="schedule.closeDay" @change="validateTime(index)">
+                        </div>
+                        <!-- 마감시간 -->
+                        <div class="col-4">
+                          <input type="time" name="close" class="form-control" v-model="schedule.close" :readonly="schedule.closeDay" @change="validateTime(index)">
+                        </div>
+                        <!-- 요일 -->
+                        <div class="col-2">
+                          <input type="text" name="dayOfWeek" class="form-control" v-model="schedule.dayOfWeek" readonly>
+                          <input type="hidden" name="dayCodeId" class="form-control" v-model="schedule.dayCodeId">
+                        </div>
+                        <!-- 휴일여부 -->
+                        <div class="col-2">
+                          <input type="checkbox" name="closeDay" class="form-check" v-model="schedule.closeDay" style="margin: 0 auto; vertical-align: middle;">
+                        </div>
+                      </div>
+                      <div> <small style="color:red;">{{ scheduleMessage }}</small></div>
+                    </fieldset>
+                    <!-- 영업시간 -->
+                    <fieldset class="border rounded-3 p-2"><legend class="float-none w-auto">편의시설 (복수 선택 가능)</legend>
+                    <div class="form-label"><label>편의시설</label></div>
+                    <span v-for="facility in facilities" :key="facility.facilityCode">
+                    <input type="checkbox" class="btn-check" :id="facility.facilityCode" name="facility" v-model="selectedFacilities" :value="facility.facilityCode">
+                    <label class="btn btn-outline-primary m-1" :for="facility.facilityCode">{{facility.facilityName}}</label>
+                    </span>
                 </div>
-              </form>
             </div>
       
             <!-- Modal footer -->
             <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+              <button type="button" @click="submitUpdate" class="btn btn-success" :disabled="!updateFlag">수정하기</button>
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">취소</button>
             </div>
-      
+            
+          </form>
           </div>
         </div>
       </div>
