index.js index.html 차트 데이터 할당 전

--- a/frontend/view/owner/index.html
+++ b/frontend/view/owner/index.html
@@ -273,7 +273,7 @@
               </div>
             </div>
 
-            <div class="row g-4">
+            <div class="container-fluid row g-4">
               <div class="col-sm-6 col-xl-3">
                 <div
                   class="bg-light rounded d-flex align-items-center justify-content-between p-4"
@@ -302,7 +302,7 @@
                 >
                   <i class="fa fa-chart-area fa-3x text-primary"></i>
                   <div class="ms-3">
-                    <p class="mb-2">오늘 수익</p>
+                    <p class="mb-2">상반기 수익</p>
                     <h6 class="mb-0">0원</h6>
                   </div>
                 </div>
@@ -313,7 +313,7 @@
                 >
                   <i class="fa fa-chart-pie fa-3x text-primary"></i>
                   <div class="ms-3">
-                    <p class="mb-2">총 수익</p>
+                    <p class="mb-2">하반기 수익</p>
                     <h6 class="mb-0">0원</h6>
                   </div>
                 </div>
@@ -331,7 +331,7 @@
                   >
                     <h6 class="mb-0">최근 6개월 매출 추이</h6>
                   </div>
-                  <canvas id="worldwide-sales"></canvas>
+                  <canvas id="sales-chart"></canvas>
                 </div>
               </div>
               <div class="col-sm-12 col-xl-6">
@@ -341,7 +341,7 @@
                   >
                     <h6 class="mb-0">최근 6개월 결제 수 추이</h6>
                   </div>
-                  <canvas id="salse-revenue"></canvas>
+                  <canvas id="salesCount-chart"></canvas>
                 </div>
               </div>
             </div>
