--- a/frontend/view/admin/srAdminIndex.html
+++ b/frontend/view/admin/srAdminIndex.html
@@ -139,17 +139,17 @@
               <h6 class="mb-0">최근 삭제 요청 리뷰</h6>
               <a href="">전체 보기</a>
             </div>
-            <div class="table-responsive">
-              <table class="table text-start table-responsive align-middle table-bordered table-hover mb-0">
+            <div>
+              <table class="table table-responsive text-start align-middle table-bordered table-hover mb-0">
                 <thead>
                   <tr class="text-dark">
-                    <th scope="col" class="col">리뷰 ID</th>
-                    <th scope="col" class="col">별점</th>
-                    <th scope="col" class="col-2">가게명</th>
-                    <th scope="col" class="col">유저명</th>
-                    <th scope="col" class="col-5">내용</th>
-                    <th scope="col" class="col">작성 날짜</th>
-                    <th scope="col" class="col">삭제</th>
+                    <th>리뷰 ID</th>
+                    <th>별점</th>
+                    <th>가게명</th>
+                    <th>유저명</th>
+                    <th>내용</th>
+                    <th>작성 날짜</th>
+                    <th>삭제</th>
                   </tr>
                 </thead>
                 <tbody>
