--- a/frontend/css/owner/index.css
+++ b/frontend/css/owner/index.css
@@ -1,4 +1,24 @@
-#calendar{
-    width: 90%;
-    margin-left: 80px;
+#calendar {
+  width: 90%;
+  margin-left: 80px;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.position-absolute {
+  position: absolute;
+}
+
+.translate-middle {
+  transform: translate(-50%, -50%);
+}
+
+.bg-danger {
+  background-color: red;
+}
+
+.rounded-circle {
+  border-radius: 50%;
 }
