--- a/frontend/view/owner/index.html
+++ b/frontend/view/owner/index.html
@@ -80,7 +80,7 @@
             </div>
             <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>위젯</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>폼</a>
-            <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>테이블</a>
+            <a href="/view/owner/coupon" class="nav-item nav-link"><i class="fa fa-table me-2"></i>쿠폰</a>
             <a href="/view/owner/review" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>리뷰</a>
             </div>
           </div>
