병합 테스트

--- a/frontend/view/owner/review.html
+++ b/frontend/view/owner/review.html
@@ -76,91 +76,11 @@
       class="container-fluid position-relative bg-white d-flex p-0"
     >
       <!-- Spinner Start -->
-      <div
-        id="spinner"
-        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
-      >
-        <div
-          class="spinner-border text-primary"
-          style="width: 3rem; height: 3rem"
-          role="status"
-        >
-          <span class="sr-only">Loading...</span>
-        </div>
-      </div>
+      <spinner-component></spinner-component>
       <!-- Spinner End -->
 
       <!-- Sidebar Start -->
-      <div class="sidebar pe-4 pb-3">
-        <nav class="navbar bg-light navbar-light">
-          <a href="index" class="navbar-brand mx-4 mb-3">
-            <h3 class="text-primary">
-              <i class="fa fa-hashtag me-2"></i>smart reserve
-            </h3>
-          </a>
-          <div class="d-flex align-items-center ms-4 mb-4">
-            <div class="position-relative">
-              <img
-                class="rounded-circle"
-                src=""
-                alt=""
-                style="width: 40px; height: 40px"
-              />
-              <div
-                class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"
-              ></div>
-            </div>
-            <div class="ms-3">
-              <h6 class="mb-0">사용자 이름</h6>
-              <span>(가게이름) 점주님</span>
-            </div>
-          </div>
-          <div class="navbar-nav w-100">
-            <a href="index.html" class="nav-item nav-link active"
-              ><i class="fa fa-tachometer-alt me-2"></i>대시보드</a
-            >
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                ><i class="fa fa-laptop me-2"></i>구성</a
-              >
-              <div class="dropdown-menu bg-transparent border-0">
-                <a href="/view/owner/button.html" class="dropdown-item">버튼</a>
-                <a href="typography.html" class="dropdown-item">문자디자인</a>
-                <a href="element.html" class="dropdown-item">기타 항목</a>
-              </div>
-            </div>
-            <a href="widget.html" class="nav-item nav-link"
-              ><i class="fa fa-th me-2"></i>위젯</a
-            >
-            <a href="form.html" class="nav-item nav-link"
-              ><i class="fa fa-keyboard me-2"></i>폼</a
-            >
-            <a href="table.html" class="nav-item nav-link"
-              ><i class="fa fa-table me-2"></i>테이블</a
-            >
-            <a href="/view/owner/chart.html" class="nav-item nav-link"
-              ><i class="fa fa-chart-bar me-2"></i>차트</a
-            >
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                ><i class="far fa-file-alt me-2"></i>페이지</a
-              >
-              <div class="dropdown-menu bg-transparent border-0">
-                <a href="signin.html" class="dropdown-item">로그인</a>
-                <a href="signup.html" class="dropdown-item">계정 생성하기</a>
-                <a href="404.html" class="dropdown-item">에러 페이지</a>
-                <a href="blank.html" class="dropdown-item">빈 페이지</a>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </div>
+      <sidebar-component></sidebar-component>
       <!-- Sidebar End -->
 
       <!-- Content Start -->
@@ -399,15 +319,7 @@
         </div>
 
         <!-- Footer Start -->
-        <div class="container-fluid pt-4 px-4">
-          <div class="bg-light rounded-top p-4">
-            <div class="row">
-              <div class="col-12 col-sm-6 text-center text-sm-start">
-                &copy; <a href="#">smartreserve.store</a>, All Right Reserved.
-              </div>
-            </div>
-          </div>
-        </div>
+        <footer-component></footer-component>
         <!-- Footer End -->
         <!-- Content End -->
       </div>
@@ -473,5 +385,6 @@
     <script src="/js/owner/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Template Javascript -->
     <script type="module" src="/js/owner/main.js"></script>
+    <script src="../../js/owner/component.js"></script>
   </body>
 </html>
